...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ingredient.IngredientStorageActivity">

    <ListView
        android:id="@+id/storage_list"
        android:layout_width="348dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_ingredient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/salmon"
        android:clickable="true"
...
